@@ -1,8 +1,12 @@
 package com.dna_testing_system.dev.service.impl;
 
+import java.util.List;
+
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import com.dna_testing_system.dev.dto.request.UserProfileRequest;
 import com.dna_testing_system.dev.dto.response.UserProfileResponse;
-import com.dna_testing_system.dev.dto.response.UserResponse;
 import com.dna_testing_system.dev.dto.response.profile.ProfileResponse;
 import com.dna_testing_system.dev.entity.User;
 import com.dna_testing_system.dev.entity.UserProfile;
@@ -12,14 +16,10 @@ import com.dna_testing_system.dev.mapper.UserProfileMapper;
 import com.dna_testing_system.dev.repository.UserProfileRepository;
 import com.dna_testing_system.dev.repository.UserRepository;
 import com.dna_testing_system.dev.service.UserProfileService;
+
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -63,8 +63,17 @@ public class UserProfileServiceImpl implements UserProfileService {
                     .filter(up -> up.getEmail() != null)
                     .anyMatch(up -> up.getEmail().equalsIgnoreCase(newEmail) && !up.getUser().getId().equals(user.getId()));
 
+<<<<<<< HEAD
             if (emailExists) {
                 throw new IllegalArgumentException("Email already in use by another user");
+=======
+            if (currentEmail == null || !currentEmail.equalsIgnoreCase(newEmail)) {
+                // Check if another user already has this email
+                boolean emailExists = userProfileRepository.existsByEmailIgnoreCaseAndUserIdNot(newEmail, user.getId());
+                if (emailExists) {
+                    throw new ResourceNotFoundException(ErrorCode.EMAIL_EXISTS);
+                }
+>>>>>>> 22765be9 (sua test case)
             }
         }
 
@@ -99,7 +108,6 @@ public class UserProfileServiceImpl implements UserProfileService {
             user.setProfile(null);
             userRepository.save(user);
         }
-        // Nếu muốn xóa luôn user thì có thể gọi userRepository.delete(user);
         return true;
     }
 
@@ -107,7 +115,10 @@ public class UserProfileServiceImpl implements UserProfileService {
     @Transactional(readOnly = true)
     public List<UserProfileResponse> getUserProfileByName(String name) {
         if (name == null || name.isBlank()) {
-            return getUserProfiles();
+            List<User> users = userRepository.findAll();
+            return users.stream()
+                    .map(userProfileMapper::toDto)
+                    .toList();
         }
 
         String keyword = name.trim().toLowerCase();
@@ -125,7 +136,7 @@ public class UserProfileServiceImpl implements UserProfileService {
                             || (!fullName.isEmpty() && fullName.toLowerCase().contains(keyword));
                 })
                 .map(userProfileMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -134,7 +145,7 @@ public class UserProfileServiceImpl implements UserProfileService {
         List<User> users = userRepository.findAll();
         return users.stream()
                 .map(userProfileMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
